<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container_signUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <!--                <com.google.android.material.textview.MaterialTextView-->
                <!--                    android:id="@+id/head"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:fontFamily="cursive"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="@string/app_name"-->
                <!--                    android:textSize="32sp" />-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space"
                    android:layout_marginTop="@dimen/space_3x"
                    android:layout_marginEnd="@dimen/space"
                    android:layout_marginBottom="@dimen/space"
                    android:padding="@dimen/space"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    style="@style/OutlinedTextBox"
                    android:layout_below="@id/tilName"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textNoSuggestions" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilUsername"
                    android:layout_margin="@dimen/space"
                    android:padding="@dimen/space"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/pb_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/OutlinedTextBox"
                    android:layout_below="@id/tilEmail"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfPassword"
                    style="@style/OutlinedTextBox"
                    android:layout_below="@id/tilPassword"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUp_btn"
                    style="@style/buttonMaterialStyle"
                    android:layout_width="100dp"
                    android:layout_height="@dimen/btn_size"
                    android:layout_below="@id/tilConfPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/space"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_up"
                    app:cornerRadius="50dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_eleveation_max"
                    android:layout_below="@id/signUp_btn"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/space"
                    android:gravity="center">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space"
                        android:text="@string/already_have_an_account" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_loginInstead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space"
                        android:paddingStart="4dp"
                        android:text="@string/login"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />


                </LinearLayout>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>



